# Strategy-Game

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  Strategy-Game.cpp  Strategy-Game.h  azure-pipelines.yml
Constants/: Constants.hpp  Strings.hpp
Core/: Component.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp
Core/Entity/: Entity.cpp  Entity.hpp  Turf.cpp  Turf.hpp
Core/GraphicComponent/: DrawVariant.hpp  GraphicComponent.cpp  GraphicComponent.hpp
Core/Managers/: ResourceManager.cpp  ResourceManager.hpp
Core/User/: Gui.cpp  Gui.hpp  Player.hpp
src/Constants/: Constants.hpp  Sprites.hpp
src/Core/: Component.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp
src/Core/Entity/: Entity.cpp  Entity.hpp  Mob.hpp  Turf.cpp  Turf.hpp
src/Core/Entity/Turfs/: Ground.hpp
src/Core/GraphicComponent/: GraphicComponent.cpp  GraphicComponent.hpp
src/Core/Managers/: ResourceManager.cpp  Visitor.cpp  Visitor.hpp
src/Core/User/: Gui.cpp  Gui.hpp  Player.hpp
test/: CMakeLists.txt
test/stress/: CMakeLists.txt  stress.cpp
test/unit/: CMakeLists.txt  unit.cpp
test/usability/: CMakeLists.txt  usability.cpp
